# posim

./: LICENSE  README.md  convert.py  example.py  example2.py  noise.py  paths.py  run.py  setup.cfg  simulate.py  utils.py  velocities.py
examples/: example_coords2path.py  example_meander.py  example_multi_char.py
src/posim/: simulate.py
src/posim.egg-info/: PKG-INFO  SOURCES.txt
src/posim_zrowland885.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/positioning-sim/: convert.py
src/positioning_sim_zrowland885.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
