[metadata]
# replace with your username:
name = positioning-sim-zrowland885
version = 0.0.1
author = zrowland885
author_email = zrowland885@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zrowland885/positioning-sim
project_urls =
    Bug Tracker = https://github.com/zrowland885/positioning-sim/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src