[metadata]
# replace with your username:
name = posim-zrowland885
version = 0.1
author = zrowland885
author_email = zrowland885@gmail.com
description = A library for generating simulated positioning data for testing GNSS applications.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zrowland885/posim
project_urls =
    Bug Tracker = https://github.com/zrowland885/posim/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
	numpy
	geographiclib
	matplotlib

[options.packages.find]
where = src